feat: add font preloading and adjust pegboard cursor style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UP-Grade 2025: Design Co</title>
+
+    <link rel="preload" href="/fonts/funnel-display-bold.woff2" as="font" type="font/woff2" />
+    <link rel="preload" href="/fonts/funnel-sans-regular.woff2" as="font" type="font/woff2" />
+    <link rel="preload" href="/fonts/funnel-sans-medium.woff2" as="font" type="font/woff2" />
   </head>
   <body>
     <div id="root"></div>
