--- a/index.html
+++ b/index.html
@@ -2,13 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UP-Grade 2025: Design Co</title>
 
-    <link rel="preload" href="/fonts/funnel-display-bold.woff2" as="font" type="font/woff2" />
-    <link rel="preload" href="/fonts/funnel-sans-regular.woff2" as="font" type="font/woff2" />
-    <link rel="preload" href="/fonts/funnel-sans-medium.woff2" as="font" type="font/woff2" />
+    <link
+      rel="preload"
+      href="/fonts/funnel-display-bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/fonts/funnel-sans-regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="/fonts/funnel-sans-medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+
+    <meta name="theme" content="#fbfaf8" />
   </head>
   <body>
     <div id="root"></div>
