--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     />
     <link
       rel="preload"
+      href="/fonts/funnel-display-medium.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
       href="/fonts/funnel-sans-regular.woff2"
       as="font"
       type="font/woff2"
@@ -22,7 +29,7 @@
     />
     <link
       rel="preload"
-      href="/fonts/funnel-sans-medium.woff2"
+      href="/fonts/funnel-sans-semibold.woff2"
       as="font"
       type="font/woff2"
       crossorigin="anonymous"
