feat: add og image and meta tags, fix faq

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
     />
 
     <meta name="theme" content="#fbfaf8" />
+    <meta
+      name="description"
+      keywords="UP-Grade is a 10-week summer internship-style program where students will get the opportunity to work alongside a local, nonprofit organization to elevate their branding and boost their exposure within the community."
+    />
+    <meta
+      name="author"
+      content="Aaron Chan, Edward new, Palinia Volskaya, Sahil Gathe, Serene Wang, Shamita Goyal, Victor Hsiao"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="UP-Grade 2025: Design Co" />
+    <meta
+      property="og:description"
+      content="UP-Grade is a 10-week summer internship-style program where students will get the opportunity to work alongside a local, nonprofit organization to elevate their branding and boost their exposure within the community."
+    />
+    <meta property="og:image" content="https://up-grade.org/og-image.png" />
+    <meta property="og:url" content="https://upgrade25.ucsddesign.co/" />
+    <meta property="og:site_name" content="UP-Grade 2025: Design Co" />
   </head>
   <body>
     <div id="root"></div>
