fix: fix og image and update meta description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <meta name="theme" content="#fbfaf8" />
     <meta
       name="description"
-      keywords="UP-Grade is a 10-week summer internship-style program where students will get the opportunity to work alongside a local, nonprofit organization to elevate their branding and boost their exposure within the community."
+      keywords="UP-Grade is a 10-week, mentor-driven summer program where student teams work on real-world product challenges pitched by industry professionals. Over 10 weeks, you’ll develop the skills needed to thrive in the product design industry."
     />
     <meta
       name="author"
@@ -49,9 +49,9 @@
     <meta property="og:title" content="UP-Grade 2025: Design Co" />
     <meta
       property="og:description"
-      content="UP-Grade is a 10-week summer internship-style program where students will get the opportunity to work alongside a local, nonprofit organization to elevate their branding and boost their exposure within the community."
+      content="UP-Grade is a 10-week, mentor-driven summer program where student teams work on real-world product challenges pitched by industry professionals. Over 10 weeks, you’ll develop the skills needed to thrive in the product design industry."
     />
-    <meta property="og:image" content="https://up-grade.org/og-image.png" />
+    <meta property="og:image" content="https://upgrade25.ucsddesign.co/og-image.png" />
     <meta property="og:url" content="https://upgrade25.ucsddesign.co/" />
     <meta property="og:site_name" content="UP-Grade 2025: Design Co" />
   </head>
